--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,6 +19,7 @@ requirements:
   host:
     - python {{ python_min }}
     - pip
+    - setuptools
   run:
     - python >={{ python_min }}
     - scikit-learn
@@ -44,7 +45,7 @@ about:
 
   description: |
     Persim is a Python package for many tools used in analyzing Persistence Diagrams. It currently houses implementations of Persistence Images, Bottleneck distance, Sliced Wasserstein Kernel, Heat Kernel, and Diagram plotting
-  doc_url: http://persim.scikit-tda.org/
+  doc_url: https://persim.scikit-tda.org/
   dev_url: https://github.com/scikit-tda/persim
 
 extra:
